--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      repo: 'HuobiGroup/huobi-eco-chain-docs',
+      repo: 'Dithereum/docs',
       loadSidebar: true,
       subMaxLevel: 2,
       homepage: 'intro.md',
       loadSidebar: 'sidebar.md',
       loadNavbar: 'navbar.md',
-      name: 'Huobi ECO Chain',
+      name: 'Dithereum',
       auto2top: true,
       markdown: {
         gfm: true,
@@ -26,8 +26,8 @@
       },
       themeColor: '#47b1de',
       pagination: {
-        previousText: '上一章节',
-        nextText: '下一章节',
+        previousText: 'Previous chapter',
+        nextText: 'Next chapter',
       },
       tabs: {
         persist    : true,      // default
@@ -41,20 +41,20 @@
       }
     }
   </script>
-  <script src="https://swap.hbfile.net/heco-chain-docs/js/docsify.min.js"></script>
-  <script src="https://swap.hbfile.net/heco-chain-docs/js/search.min.js"></script>
-  <script src="https://swap.hbfile.net/heco-chain-docs/js/docsify-pagination.min.js"></script>
-  <script src="https://swap.hbfile.net/heco-chain-docs/js/prism-bash.min.js"></script>
-  <script src="https://swap.hbfile.net/heco-chain-docs/js/prism-json.min.js"></script>
-  <script src="https://swap.hbfile.net/heco-chain-docs/js/prism-javascript.min.js"></script>
-  <script src="https://swap.hbfile.net/heco-chain-docs/js/prism-typescript.min.js"></script>
-  <script src="https://swap.hbfile.net/heco-chain-docs/js/prism-rust.min.js"></script>
-  <script src="https://swap.hbfile.net/heco-chain-docs/js/prism-c.min.js"></script>
-  <script src="https://swap.hbfile.net/heco-chain-docs/js/prism-graphql.min.js"></script>
-  <script src="https://swap.hbfile.net/heco-chain-docs/js/prism-makefile.min.js"></script>
-  <script src="https://swap.hbfile.net/heco-chain-docs/js/prism-diff.min.js"></script>
-  <script src="https://swap.hbfile.net/heco-chain-docs/js/docsify-tabs@1.js"></script>
-  <script src="https://swap.hbfile.net/heco-chain-docs/js/docsify-plugin-flexible-alerts.min.js"></script>
+  <script src="assets/js/docsify.min.js"></script>
+  <script src="assets/js/search.min.js"></script>
+  <script src="assets/js/docsify-pagination.min.js"></script>
+  <script src="assets/js/prism-bash.min.js"></script>
+  <script src="assets/js/prism-json.min.js"></script>
+  <script src="assets/js/prism-javascript.min.js"></script>
+  <script src="assets/js/prism-typescript.min.js"></script>
+  <script src="assets/js/prism-rust.min.js"></script>
+  <script src="assets/js/prism-c.min.js"></script>
+  <script src="assets/js/prism-graphql.min.js"></script>
+  <script src="assets/js/prism-makefile.min.js"></script>
+  <script src="assets/js/prism-diff.min.js"></script>
+  <script src="assets/js/docsify-tabs@1.js"></script>
+  <script src="assets/js/docsify-plugin-flexible-alerts.min.js"></script>
   <script>
     var source = document.documentElement.clientWidth > 768 ? 1 : 4;
     window.woodpecker = window.woodpecker || {
@@ -69,7 +69,7 @@
     };
     (function() {
       var bw = document.createElement('script');
-      bw.src = 'https://open.woodpeckerlog.com/static/woodpecker.js';
+      bw.src = 'assets/js/woodpecker.js';
       bw.async = true;
       var s = document.getElementsByTagName('script')[0];
       s.parentNode.insertBefore(bw, s);
