--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Dithereum Documentation</title>
+  <title>Darthion Documentation</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="Dithereum Documentation">
+  <meta name="description" content="Darthion Documentation">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="assets/css/vue.css">
 </head>
@@ -12,13 +12,13 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      repo: 'Dithereum/docs',
+      repo: 'Darthion/docs',
       loadSidebar: true,
       subMaxLevel: 2,
       homepage: 'intro.md',
       loadSidebar: 'sidebar.md',
       loadNavbar: 'navbar.md',
-      name: 'Dithereum',
+      name: 'Darthion',
       auto2top: true,
       markdown: {
         gfm: true,
